--- a/src/main/resources/templates/apartamentos.html
+++ b/src/main/resources/templates/apartamentos.html
@@ -245,27 +245,6 @@
 						<!-- Content Row -->
 						<div class="row">
 
-							<!-- Earnings (Monthly) Card Example
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-primary shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-													MI CUENTA</div>
-
-											</div>
-											<div class="col-auto">
-
-												<a th:href="@{/login}">
-													<i class="fas fa fa-user-circle fa-4x text-gray-300"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div> -->
-
 							<!-- Earnings (Monthly) Card Example -->
 							<div class="col-xl-3 col-md-6 mb-4">
 								<div class="card border-left-success shadow h-100 py-2">
@@ -284,156 +263,140 @@
 									</div>
 								</div>
 							</div>
-
-							<!-- Earnings (Monthly) Card Example
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-info shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-info text-uppercase mb-1">
-													DISPONIBLES
-												</div>
-												<div class="row no-gutters align-items-center">
-													<div class="col-auto">
-														<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%
-														</div>
-													</div>
-													<div class="col">
-														<div class="progress progress-sm mr-2">
-															<div class="progress-bar bg-info" role="progressbar"
-																style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-																aria-valuemax="100"></div>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="col-auto">
-												<i class="fas fa-clipboard-list fa-3x text-gray-300"></i>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div> -->
-
-							<!-- Pending Requests Card Example
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-warning shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
-													SECCIONES</div>
-											</div>
-											<div class="col-auto">
-												<a th:href="@{/secciones}">
-													<i class="fas fa-comments fa-4x text-gray-300"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div> -->
+						</div>
 
 						<!--Content Row -->
 
 						<div class="center">
 
 							<!-- Area Chart -->
-							<div class="col-xl-8 col-lg-7">
-								<div class="card shadow mb-4">
+							<div class="card mb-4">
+								<div class="card">
+									<tbody>
+										<tr th:each="Publicacion:${listarPublic}"
+											th:if="${Publicacion.tipoLugar == 'APARTAMENTOS'}">
+											<td>
+												<div class="card-body">
+													<div class="card text-center">
 
-									<div class="container-fluid">
-										<table class="table table-responsive table-striped table-hover">
-											<tbody>
-												<tr th:each="Publicacion:${listarPublic}"
-													th:if="${Publicacion.tipoLugar == 'APARTAMENTOS'}">
-													<td>
-														<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-															class="bd-placeholder-img rounded img-fluid">
+														<div id="carouselExampleControls" class="carousel slide"
+															data-ride="carousel">
+															<div class="carousel-inner">
+																<div class="carousel-item active">
+																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																		class="d-block w-100" alt="primera imagen">
+																</div>
+																<div class="carousel-item">
+																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																		class="d-block w-100" alt="Segunda imagen">
+																</div>
+																<div class="carousel-item">
+																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																		class="d-block w-100" alt="Tercer imagen">
+																</div>
+															</div>
+															<a class="carousel-control-prev"
+																href="#carouselExampleControls" role="button"
+																data-slide="prev">
+																<span class="carousel-control-prev-icon"
+																	aria-hidden="true"></span>
+																<span class="sr-only">Previous</span>
+															</a>
+															<a class="carousel-control-next"
+																href="#carouselExampleControls" role="button"
+																data-slide="next">
+																<span class="carousel-control-next-icon"
+																	aria-hidden="true"></span>
+																<span class="sr-only">Next</span>
+															</a>
+														</div>
 
-														<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
-														<p scope="row" th:text="${Publicacion.Descripcion}"></p>
-														<p scope="row" th:text="${Publicacion.direccion}"></p>
-														<P scope="row" th:text="${Publicacion.disponible}"></P>
-														<p scope="row" th:text="${Publicacion.medida}"></p>
-														<p scope="row" th:text="${Publicacion.precio}"></p>
+											</td>
+											<td>
+												<label for="formGroupExampleInput" class="form-label">
 
-													</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
+													<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+													<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+													<p scope="row" th:text="${Publicacion.direccion}"></p>
+													<P scope="row" th:text="${Publicacion.disponible}"></P>
+													<p scope="row" th:text="${Publicacion.medida}"></p>
+													<p scope="row" th:text="${Publicacion.precio}"></p>
 
+											</td>
+
+											</label>
 								</div>
+								</tr>
+								</tbody>
 							</div>
 
 						</div>
-						<!--container-fluid -->
-
-					</div>
-					<!-- End of Main Content -->
-
-					<!--Footer-->
-					<footer class="sticky-footer bg-white">
-						<div class="container my-auto">
-							<div class="copyright text-center my-auto">
-								<span>Copyright; MR 2023</span>
-							</div>
-						</div>
-					</footer>
-					<!-- End of Footer -->
-
-				</div>
-				<!-- End of Content Wrapper -->
-
-			</div>
-			<!-- End of Page Wrapper -->
-
-			<!-- Scroll to Top Button-->
-			<a class="scroll-to-top rounded" href="#page-top">
-				<i class="fas fa-angle-up"></i>
-			</a>
-
-			<!-- Logout Modal-->
-			<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-				aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-							<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">×</span>
-							</button>
-						</div>
-						<div class="modal-body">Select "Logout" below if you are ready to end your
-							current session.
-						</div>
-						<div class="modal-footer">
-							<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-							<a class="btn btn-primary" href="login.html">Logout</a>
-						</div>
 					</div>
 				</div>
+				<!--container-fluid -->
 			</div>
+		</div>
+		<!-- End of Main Content -->
 
-			<!-- Bootstrap core JavaScript-->
-			<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-			<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+		<!--Footer-->
+		<footer class="sticky-footer bg-white">
+			<div class="container my-auto">
+				<div class="copyright text-center my-auto">
+					<span>Copyright; MR 2023</span>
+				</div>
+			</div>
+		</footer>
+		<!-- End of Footer -->
+	</div>
+	</div>
+	<!-- End of Content Wrapper -->
+</body>
+</div>
+<!-- End of Page Wrapper -->
 
-			<!-- Core plugin JavaScript-->
-			<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+	<i class="fas fa-angle-up"></i>
+</a>
 
-			<!-- Custom scripts for all pages-->
-			<script th:src="@{/js/sb-admin-2.min.js}"></script>
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+	aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+				<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">×</span>
+				</button>
+			</div>
+			<div class="modal-body">Select "Logout" below if you are ready to end your
+				current session.
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+				<a class="btn btn-primary" href="login.html">Logout</a>
+			</div>
+		</div>
+	</div>
+</div>
 
-			<!-- Page level plugins -->
-			<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+<!-- Bootstrap core JavaScript-->
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-			<!-- Page level custom scripts -->
-			<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-			<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+<!-- Core plugin JavaScript-->
+<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+
+<!-- Custom scripts for all pages-->
+<script th:src="@{/js/sb-admin-2.min.js}"></script>
+
+<!-- Page level plugins -->
+<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+
+<!-- Page level custom scripts -->
+<script th:src="@{/js/demo/chart-area-demo.js}"></script>
+<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 
 </body>
 
