--- a/src/main/resources/templates/casas.html
+++ b/src/main/resources/templates/casas.html
@@ -265,13 +265,13 @@
 								</div>
 							</div>
 
-						<!--Content Row -->
+							<!--Content Row -->
 
-						<div class="center">
+							<div class="center">
 
-							<!-- Area Chart -->
-							<div class="col-xl-8 col-lg-7">
-								<div class="card shadow mb-4">
+								<!-- Area Chart -->
+
+								<div class="card mb-4">
 									<div class="card">
 										<tbody>
 											<tr th:each="Publicacion:${listarPublic}"
@@ -279,117 +279,126 @@
 												<td>
 													<div class="card-body">
 														<div class="card text-center">
-													
-																													
-															<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-															  <div class="carousel-inner">
-															    <div class="carousel-item active">
-															      <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+
+															<div id="carouselExampleControls" class="carousel slide"
+																data-ride="carousel">
+																<div class="carousel-inner">
+																	<div class="carousel-item active">
+																		<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
 																			class="d-block w-100" alt="primera imagen">
-															    </div>
-															    <div class="carousel-item">
-															         <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																	</div>
+																	<div class="carousel-item">
+																		<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
 																			class="d-block w-100" alt="Segunda imagen">
-															    </div>
-															    <div class="carousel-item">
-															         <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																	</div>
+																	<div class="carousel-item">
+																		<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
 																			class="d-block w-100" alt="Tercer imagen">
-															    </div>
-															  </div>
-															  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-															    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-															    <span class="sr-only">Previous</span>
-															  </a>
-															  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-															    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-															    <span class="sr-only">Next</span>
-															  </a>
+																	</div>
+																</div>
+																<a class="carousel-control-prev"
+																	href="#carouselExampleControls" role="button"
+																	data-slide="prev">
+																	<span class="carousel-control-prev-icon"
+																		aria-hidden="true"></span>
+																	<span class="sr-only">Previous</span>
+																</a>
+																<a class="carousel-control-next"
+																	href="#carouselExampleControls" role="button"
+																	data-slide="next">
+																	<span class="carousel-control-next-icon"
+																		aria-hidden="true"></span>
+																	<span class="sr-only">Next</span>
+																</a>
 															</div>
-															
-															
-															
-												</td>
-												<td>
-
-													<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
-													<p scope="row" th:text="${Publicacion.Descripcion}"></p>
-													<p scope="row" th:text="${Publicacion.direccion}"></p>
-													<P scope="row" th:text="${Publicacion.disponible}"></P>
-													<p scope="row" th:text="${Publicacion.medida}"></p>
-													<p scope="row" th:text="${Publicacion.precio}"></p>
 
 												</td>
+
+												<label for="formGroupExampleInput" class="form-label">
+
+													<td>
+
+														<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+														<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+														<p scope="row" th:text="${Publicacion.direccion}"></p>
+														<P scope="row" th:text="${Publicacion.disponible}"></P>
+														<p scope="row" th:text="${Publicacion.medida}"></p>
+														<p scope="row" th:text="${Publicacion.precio}"></p>
+
+													</td>
+
+												</label>
 									</div>
 									</tr>
 									</tbody>
 								</div>
 							</div>
 						</div>
+
+						<!--container-fluid -->
+
 					</div>
-					<!--container-fluid -->
+					<!-- End of Main Content -->
+
+					<!--Footer-->
+					<footer class="sticky-footer bg-white">
+						<div class="container my-auto">
+							<div class="copyright text-center my-auto">
+								<span>Copyright; MR 2024</span>
+							</div>
+						</div>
+					</footer>
+					<!-- End of Footer -->
 
 				</div>
-				<!-- End of Main Content -->
+				<!-- End of Content Wrapper -->
 
-				<!--Footer-->
-				<footer class="sticky-footer bg-white">
-					<div class="container my-auto">
-						<div class="copyright text-center my-auto">
-							<span>Copyright; MR 2024</span>
+			</div>
+			<!-- End of Page Wrapper -->
+
+			<!-- Scroll to Top Button-->
+			<a class="scroll-to-top rounded" href="#page-top">
+				<i class="fas fa-angle-up"></i>
+			</a>
+
+			<!-- Logout Modal-->
+			<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+				aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+							<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">×</span>
+							</button>
+						</div>
+						<div class="modal-body">Select "Logout" below if you are ready to end your
+							current session.
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+							<a class="btn btn-primary" href="login.html">Logout</a>
 						</div>
 					</div>
-				</footer>
-				<!-- End of Footer -->
-
-			</div>
-			<!-- End of Content Wrapper -->
-
-		</div>
-		<!-- End of Page Wrapper -->
-
-		<!-- Scroll to Top Button-->
-		<a class="scroll-to-top rounded" href="#page-top">
-			<i class="fas fa-angle-up"></i>
-		</a>
-
-		<!-- Logout Modal-->
-		<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-			aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">×</span>
-						</button>
-					</div>
-					<div class="modal-body">Select "Logout" below if you are ready to end your
-						current session.
-					</div>
-					<div class="modal-footer">
-						<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-						<a class="btn btn-primary" href="login.html">Logout</a>
-					</div>
 				</div>
 			</div>
-		</div>
 
-		<!-- Bootstrap core JavaScript-->
-		<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-		<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+			<!-- Bootstrap core JavaScript-->
+			<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+			<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-		<!-- Core plugin JavaScript-->
-		<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+			<!-- Core plugin JavaScript-->
+			<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
-		<!-- Custom scripts for all pages-->
-		<script th:src="@{/js/sb-admin-2.min.js}"></script>
+			<!-- Custom scripts for all pages-->
+			<script th:src="@{/js/sb-admin-2.min.js}"></script>
 
-		<!-- Page level plugins -->
-		<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+			<!-- Page level plugins -->
+			<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
 
-		<!-- Page level custom scripts -->
-		<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-		<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+			<!-- Page level custom scripts -->
+			<script th:src="@{/js/demo/chart-area-demo.js}"></script>
+			<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 
 </body>
 
