--- a/src/main/resources/templates/habitaciones.html
+++ b/src/main/resources/templates/habitaciones.html
@@ -245,27 +245,6 @@
 						<!-- Content Row -->
 						<div class="row">
 
-							<!-- Earnings (Monthly) Card Example 
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-primary shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-													MI CUENTA</div>
-
-											</div>
-											<div class="col-auto">
-
-												<a th:href="@{/login}">
-													<i class="fas fa fa-user-circle fa-4x text-gray-300"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>-->
-
 							<!-- Earnings (Monthly) Card Example -->
 							<div class="col-xl-3 col-md-6 mb-4">
 								<div class="card border-left-success shadow h-100 py-2">
@@ -285,75 +264,37 @@
 								</div>
 							</div>
 
-							<!-- Earnings (Monthly) Card Example 
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-info shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-info text-uppercase mb-1">
-													DISPONIBLES
-												</div>
-												<div class="row no-gutters align-items-center">
-													<div class="col-auto">
-														<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%
-														</div>
-													</div>
-													<div class="col">
-														<div class="progress progress-sm mr-2">
-															<div class="progress-bar bg-info" role="progressbar"
-																style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-																aria-valuemax="100"></div>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="col-auto">
-												<i class="fas fa-clipboard-list fa-3x text-gray-300"></i>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>-->
+							<!--Content Row -->
 
-							<!-- Pending Requests Card Example 
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-warning shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
-													SECCIONES</div>
-											</div>
-											<div class="col-auto">
-												<a th:href="@{/secciones}">
-													<i class="fas fa-comments fa-4x text-gray-300"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>-->
+							<div class="center">
 
-						<!--Content Row -->
+								<!-- Area Chart -->
 
-						<div class="center">
+								<div class="card mb-4">
+									<div class="card">
+										<tbody>
+											<tr th:each="Publicacion:${listarPublic}"
+												th:if="${Publicacion.tipoLugar == 'HABITACIONES'}">
+												<td>
+													<div class="card-body">
+														<div class="card text-center">
 
-							<!-- Area Chart -->
-							<div class="col-xl-8 col-lg-7">
-								<div class="card shadow mb-4">
+															<div id="carouselExampleControls" class="carousel slide"
+																data-ride="carousel">
+																<div class="carousel-inner">
+																	<div class="carousel-item active">
+																		<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																			class="d-block w-100" alt="primera imagen">
+																	</div>
+																</div>
+															</div>
+												</td>
 
-									<div class="container-fluid">
-										<table class="table table-responsive table-striped table-hover">
-											<tbody>
-												<tr th:each="Publicacion:${listarPublic}"
-													th:if="${Publicacion.tipoLugar == 'HABITACIONES'}">
+												<label for="formGroupExampleInput" class="form-label">
+
 													<td>
-														<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-															class="bd-placeholder-img rounded img-fluid">
 
-														<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+														<p scope="row" th:text="${Publicacion.tipoLugar}">TIPO DE LUGAR: </p>
 														<p scope="row" th:text="${Publicacion.Descripcion}"></p>
 														<p scope="row" th:text="${Publicacion.direccion}"></p>
 														<P scope="row" th:text="${Publicacion.disponible}"></P>
@@ -361,18 +302,19 @@
 														<p scope="row" th:text="${Publicacion.precio}"></p>
 
 													</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
 
+												</label>
+									</div>
+									</tr>
+									</tbody>
 								</div>
 							</div>
-
 						</div>
+
 						<!--container-fluid -->
 
 					</div>
+				</div>
 					<!-- End of Main Content -->
 
 					<!--Footer-->
