--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -248,7 +248,7 @@
 												</div>
 											</div>
 											<div class="col-auto">
-												<a th:text="${totalPublicacionesCasas}" class="h5 mb-0 mr-3 font-weight-bold text-gray-1100"></a>
+												<a th:text="${totalPublicaciones}" class="h5 mb-0 mr-3 font-weight-bold text-gray-1100"></a>
 												<div class="progress progress-sm mr-2">
 													<div class="progress-bar bg-info" role="progressbar"
 														style="width: 50%" aria-valuenow="50" aria-valuemin="0"
